Category is not mandatory field